# blif

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
sample/: .gitignore
src/: CMakeLists.txt  Doxyfile  circuit.cpp  gate.cpp  parse.cpp  remodeler.cpp  trimmed_lines.cpp  unittest.cpp
src/blif/: circuit.h  gate.h  parse.h  remodeler.h
src/blif/details/: trimmed_lines.h
src/sample/: Makefile  blif_stat.cpp
